feat(media_asset): 用React/ant重写batch_upload

--- a/templates/admin/workflow/project/annotation/import_form.html
+++ b/templates/admin/workflow/project/annotation/import_form.html
@@ -9,7 +9,7 @@
     <script src="{% static 'creative/js/libs/dayjs.min.js' %}"></script>
     <script src="{% static 'creative/js/libs/antd.min.js' %}"></script>
     <script src="{% static 'creative/js/libs/babel.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ant-design-icons/4.7.0/index.umd.min.js"></script>
+    <script src="{% static 'creative/js/libs/index.umd.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'creative/css/factory.css' %}">
     <style>
