--- a/templates/admin/workflow/project/creative/director_tab.html
+++ b/templates/admin/workflow/project/creative/director_tab.html
@@ -1,45 +1,34 @@
 {% extends "admin/change_form.html" %}
 {% load i18n static unfold %}
 
-{# --- 1. 注入 CSS --- #}
 {% block extrahead %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'creative/css/factory.css' %}">
+    {# 引入统一样式 #}
+    <link rel="stylesheet" href="{% static 'css/bundles/creative-director.css' %}">
 
-    {# 隐藏 Unfold 默认的一些 Form 元素，给 React 腾地 #}
+    {# 隐藏 Unfold 默认 Form 元素 #}
     <style>
         .submit-row { display: none !important; }
         #content-main form { min-height: 600px; }
-        [v-cloak] { display: none; }
-
+        /* 隐藏掉不需要的 Django Admin 元素 */
+        .breadcrumbs { display: none; }
     </style>
+{% endblock %}
 
-    {# 注入数据上下文 #}
+{% block content %}
+    {# 1. 数据桥接: 注入服务端数据 #}
     <script>
         window.SERVER_DATA = {{ server_data_json|default:"{}"|safe }};
     </script>
 
-    {# React 依赖库 #}
-    <script src="{% static 'creative/js/libs/react.production.min.js' %}"></script>
-    <script src="{% static 'creative/js/libs/react-dom.production.min.js' %}"></script>
-    <script src="{% static 'creative/js/libs/dayjs.min.js' %}"></script>
-    <script src="{% static 'creative/js/libs/antd.min.js' %}"></script>
-    <script src="{% static 'creative/js/libs/babel.min.js' %}"></script>
-
-    {# Director 业务代码 (加载 js/director/ 下的文件) #}
-    <script type="text/javascript" src="{% static 'creative/js/director/config.js' %}"></script>
-    <script type="text/javascript" src="{% static 'creative/js/director/utils.js' %}"></script>
-    <script type="text/babel" src="{% static 'creative/js/director/widgets.js' %}"></script>
-    <script type="text/babel" src="{% static 'creative/js/director/cards.js' %}"></script>
-    <script type="text/babel" src="{% static 'creative/js/director/main.js' %}"></script>
-{% endblock %}
-
-{# --- 2. 注入挂载点 --- #}
-{% block content %}
-    <div id="react-root" class="p-4">
+    {# 2. 挂载点 #}
+    <div id="react-root" class="p-4 bg-gray-50 min-h-screen">
         <div class="p-12 text-center text-gray-400">
-            <span class="material-symbols-outlined text-4xl animate-spin">progress_activity</span>
-            <p class="mt-2">正在启动导演驾驶舱...</p>
+            <div class="inline-block animate-spin rounded-full h-8 w-8 border-b-2 border-purple-600 mb-2"></div>
+            <p>正在启动导演驾驶舱...</p>
         </div>
     </div>
+
+    {# 3. 引用 Vite 构建产物 (Module) #}
+    <script type="module" src="{% static 'js/bundles/creative-director.js' %}"></script>
 {% endblock %}
